feat: add settings for deploy in vercel
