# Backend/app/Http/Controllers/LoginController.php
@@ -11,39 +11,27 @@ use Illuminate\Support\Facades\Validator;
 use Illuminate\Support\Facades\Auth;
 use Illuminate\Support\Facades\Hash;
 
-/**
-* @OA\Info(
-*             title="Controlador de Acceso de usuario", 
-*             version="1.0",
-*             description="Crear usuario, cerrar e iniciar sesion."
-* )
-*
-* @OA\Server(url="http://localhost")
-*/
-
-
-
-
 class LoginController extends Controller
 {
-    /**
-     * @OA\Post(
-     *     path="/api/login_user",
-     *     tags={"Authentication"},
-     *     summary="Iniciar sesión",
-     *     @OA\RequestBody(
-     *         required=true,
-     *         @OA\JsonContent(
-     *             required={"username","password"},
-     *             @OA\Property(property="username", type="string"),
-     *             @OA\Property(property="password", type="string")
-     *         )
-     *     ),
-     *     @OA\Response(response=200, description="Login satisfactorio"),
-     *     @OA\Response(response=400, description="Los datos ingresados son incorrectos"),
-     *     @OA\Response(response=422, description="Error de validación")
-     * )
-     */
+/**
+ * @OA\Post(
+ *     path="/login_user",
+ *     tags={"Authentication"},
+ *     summary="Iniciar sesión",
+ *     @OA\RequestBody(
+ *         required=true,
+ *         @OA\JsonContent(
+ *             required={"username", "password"},
+ *             @OA\Property(property="username", type="string", example="producer_user"),
+ *             @OA\Property(property="password", type="string", example="StrongTrainerPassword123")
+ *         )
+ *     ),
+ *     @OA\Response(response=200, description="Login satisfactorio"),
+ *     @OA\Response(response=400, description="Los datos ingresados son incorrectos"),
+ *     @OA\Response(response=422, description="Error de validación")
+ * )
+ */
+
     public function login_session(Request $request){
         $credentials = $request->only('username', 'password');
         $validator = Validator::make($credentials, [
@@ -106,15 +94,18 @@ class LoginController extends Controller
     }
 
 
-     /**
-     * @OA\Post(
-     *     path="/api/log_out",
-     *     tags={"Authentication"},
-     *     summary="Cerrar sesión",
-     *     @OA\Response(response=200, description="Sesión cerrada"),
-     *     @OA\Response(response=404, description="Usuario no encontrado")
-     * )
-     */
+/**
+ * @OA\Post(
+ *     path="/log_out",
+ *     tags={"Authentication"},
+ *     summary="Cerrar sesión",
+ *     description="Este endpoint cierra la sesión del usuario. Se requiere autenticación.",
+ *     security={{"bearerAuth": {}}},
+ *     @OA\Response(response=200, description="Sesión cerrada"),
+ *     @OA\Response(response=401, description="No autorizado, el usuario no está autenticado"),
+ *     @OA\Response(response=404, description="Usuario no encontrado")
+ * )
+ */
     // Metodo cerrar sesion
     public function logout_user(Request $request)
     {
@@ -143,7 +134,7 @@ class LoginController extends Controller
 
     /**
      * @OA\Post(
-     *     path="/api/create_user",
+     *     path="/create_user",
      *     tags={"User Management"},
      *     summary="Crear usuario",
      *     @OA\RequestBody(
